removed my API key

--- a/Backend/.env
+++ b/Backend/.env
@@ -4,7 +4,7 @@ PORT=5000
 FRONTEND_URL=http://localhost:3000
 
 # google api key
-GOOGLE_AI_STUDIO_API_KEY=AIzaSyAtsS_s-oIXTerV53aZ8gH02_ZSpQ2SOOI
+GOOGLE_AI_STUDIO_API_KEY= <<add your API key>>
 
 # Delivery Configuration
 DELIVERY_FEE_BASE=10
